# Arcana

./: pyproject.toml  requirements.txt
arcana/indicators/: __init__.py  adapters.py  cfg.py  converters.py  data.py  indicators.py  interface.py  main.py
arcana/indicators/c_definitions/: __init__.py  indicators.h  moving_averages.c
arcana/price_data/: __init__.py  adapters.py  cfg.py  converters.py  data.py  dev_types.py  interface.py  loader.py
arcana/price_data/utils/: PATHS.py
arcana/utils/: RegistryTree.py  classes_utils.py  df_utils.py
examples/: 00_price_data.py  01_indicators.py
